--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<div id="nav" data-edge-strategy="set" data-0="transform:translate(200%,0%);" data-100="transform:translate(0%,0%)">
+	<div id="nav" data-edge-strategy="set" data-0="transform:translate(200%,0%);" data-300="transform:translate(0%,0%)">
 		<div id="edge"><img src="img/nav1.png"></div>
 		<ul>
 			<li><a href="#top">Home</a></li>
@@ -22,31 +22,31 @@
 		</ul>
 	</div>
 
-	<div id="top" data-100="transform:translate(0,0%);" data-200p="transform:translate(0,-100%);" class="home">
+	<div id="top" data-300="transform:translate(0,0%);" data-400p="transform:translate(0,-100%);" class="home">
 		<h1 id="forrest">Forrest</h1>
 		<h1 id="bourke">Bourke</h1>
 	</div>
 
-	<div id="s2" data-100="transform:translate(0,100%);" data-200p="transform:translate(0,0%)" data-_box-250p="" data-_box-350p="transform:translate(0,-100%)">
+	<div id="s2" data-300="transform:translate(0,100%);" data-400p="transform:translate(0,0%)" data-_box-450p="" data-_box-550p="transform:translate(0,-100%)">
 		<img src="img/red-arrow.png" id="arrow">
-		<div class="box" data-250p="width:0%;" data-_box-250p="width:100%"> 
+		<div class="box" data-400p="width:0%;" data-_box-450p="width:100%"> 
 			<h2 id="cc">The&nbsp;Confectionery&nbsp;Cannon</h2>
 		</div>
 	</div>
 
-	<div id="s3" class="cannon-text" data-100="transform:translate(50%,300%);" data-200p="transform:translate(50%,30%)" data-_box-250p="" data-_box-350p="transform:translate(50%,-300%)">
+	<div id="s3" class="cannon-text" data-300="transform:translate(50%,300%);" data-400p="transform:translate(50%,30%)" data-_box-450p="" data-_box-550p="transform:translate(50%,-300%)">
 		<h3>Marshmallow Launching</h3>
 	</div>
 
-	<div id="s3" class="cannon-text" data-100="transform:translate(40%,200%);" data-200p="transform:translate(40%,50%)" data-_box-250p="" data-_box-350p="transform:translate(40%,-200%)">
+	<div id="s3" class="cannon-text" data-300="transform:translate(40%,200%);" data-400p="transform:translate(40%,50%)" data-_box-450p="" data-_box-550p="transform:translate(40%,-200%)">
 		<h3>Face Tracking</h3>
 	</div>
 
-	<div id="s3" class="cannon-text" data-100="transform:translate(-50%,40%);" data-300p="transform:translate(15%,40%)" data-_box-250p="" data-_box-350p="transform:translate(15%,-200%)">
+	<div id="s3" class="cannon-text" data-350p="transform:translate(-50%,40%);" data-400p="transform:translate(15%,40%)" data-_box-450p="" data-_box-550p="transform:translate(15%,-200%)">
 		<h3 id="see-it">See it <a style="color:inherit;" href="http://confectionerycannon.com/">here</a></h3>
 	</div>
 
-	<div id="end" data-_box-250p="transform:translate(0,100%);" data-_box-350p="transform:translate(0,0%);">
+	<div id="end" data-_box-450p="transform:translate(0,100%);" data-_box-550p="transform:translate(0,0%);">
 		hello
 	</div>
 
