--- a/index.html
+++ b/index.html
@@ -1,66 +1,136 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link href="//fonts.googleapis.com/css?family=Lato:100italic,100,300italic,300,400italic,400,700italic,700,900italic,900" rel="stylesheet" type="text/css">
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700' rel='stylesheet' type='text/css'>
-	<link href="css/style.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,600,700' rel='stylesheet' type='text/css'>
 
-	<title>Forrest Bourke</title>
+    <title>Forrest Bourke</title>
 
-</head>
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/vegas/jquery.vegas.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery.vegas.css">
 
-<body>
-	<div id="nav" data-edge-strategy="set" data-0="transform:translate(200%,0%);" data-300="transform:translate(0%,0%)">
-		<div id="edge"><img src="img/nav1.png"></div>
-		<ul>
-			<li><a href="#top">Home</a></li>
-			<li><a href="#s2">Confectionery Cannon</a></li>
-			<li><a href="#s3">Tesla Coil</a></li>
-		</ul>
-	</div>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="navbar navbar-default navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav" id="main-menu">
+            <li><a href="#page-welcome">Home</a></li>
+            <li><a href="#page-profile">Profile</a></li>
+            <li><a href="#page-skills">Skills</a></li>
+            <li><a href="#page-education">Education</a></li>
+            <li><a href="#page-experience">Experience</a></li>
+            <li><a href="#page-portfolio">Portfolio</a></li>
+            <li><a href="#page-contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div> <!-- navbar ends -->
+        <!-- welcome begins -->
+    <section id="page-welcome" class="page-welcome">
+      <div>
+          <ul class="slider-controls">
+              <li><a id="vegas-next" class="next" href="#"></a></li>
+              <li><a id="vegas-prev" class="prev" href="#"></a></li>
+          </ul>
+        </div>
+        <div class="container">
+            <div class="row">
+                <header class="centered">
+                    <h1>Forrest Bourke</h1>
+                    <p id="hello">ENGINEER</p>
+                </header>
+                <div class="social-icons">
+                        <a href="http://www.linkedin.com/profile/view?id=321196702" target="_blank" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
+                         <a href="misc/fbourke_resume.pdf" class="btn btn-round btn-clear btn-resume"><i class="fa fa-book"></i></a>
+                        <a href="#page-skills" class="btn btn-round btn-clear btn-arrow"><i class="fa fa-arrow-down"></i></a>
+                    
+                </div>
+                <a href="#page-contact" class="btn btn-default hire-me">Hire Me</a>
+            </div>
+        </div>
+    </section><!-- welcome -->
+       <!-- skills -->
+     <section id="page-skills" class="page-skills">
+       <div class="container">
+           
+                 <header class="section-header">
+                    <h2 class="section-title"><span>Skills</span></h2>
+                      <div class="spacer"></div>
+                    <p class="section-subtitle">Lorem ipsum dolor sit amet, id iusto oportere mel. </p>
+                </header>
+            <div class="row">
+              <div class="col-md-2">
+               <span class="chart" data-percent="95">
+                      <span class="percent"></span>
+                      <h3>Photoshop</h3>
+               </span>
+            </div>
+               <div class="col-md-2 ">
+               <span class="chart" data-percent="60">
+                      <span class="percent"></span>
+                      <h3>Python</h3>
+               </span>
+            </div>
+               <div class="col-md-2">
+               <span class="chart" data-percent="75">
+                      <span class="percent"></span>
+                       <h3>HTML/CSS</h3>
+               </span>
+            </div>
+               <div class="col-md-2">
+               <span class="chart" data-percent="90">
+                      <span class="percent"></span>
+                      <h3>GTAW/TIG Welding</h3>
+               </span>
+            </div>
+               <div class="col-md-2">
+               <span class="chart" data-percent="65">
+                      <span class="percent"></span>
+                      <h3>jQuery</h3>
+               </span>
+            </div>
+               <div class="col-md-2">
+               <span class="chart" data-percent="99">
+                      <span class="percent"></span>
+                       <h3>Meaningless Metrics</h3>
+               </span>
+            </div>
+          </div>
+        </div>
+    </section><!-- skills -->
 
-	<div id="top" data-300="transform:translate(0,0%);" data-400p="transform:translate(0,-100%);" class="home">
-		<h1 id="forrest">Forrest</h1>
-		<h1 id="bourke">Bourke</h1>
-	</div>
-
-	<div id="s2" data-300="transform:translate(0,100%);" data-400p="transform:translate(0,0%)" data-_box-450p="" data-_box-550p="transform:translate(0,-100%)">
-		<img src="img/red-arrow.png" id="arrow">
-		<div class="box" data-400p="width:0%;" data-_box-450p="width:100%"> 
-			<h2 id="cc">The&nbsp;Confectionery&nbsp;Cannon</h2>
-		</div>
-	</div>
-
-	<div id="s3" class="cannon-text" data-300="transform:translate(50%,300%);" data-400p="transform:translate(50%,30%)" data-_box-450p="" data-_box-550p="transform:translate(50%,-300%)">
-		<h3>Marshmallow Launching</h3>
-	</div>
-
-	<div id="s3" class="cannon-text" data-300="transform:translate(40%,200%);" data-400p="transform:translate(40%,50%)" data-_box-450p="" data-_box-550p="transform:translate(40%,-200%)">
-		<h3>Face Tracking</h3>
-	</div>
-
-	<div id="s3" class="cannon-text" data-350p="transform:translate(-50%,40%);" data-400p="transform:translate(15%,40%)" data-_box-450p="" data-_box-550p="transform:translate(15%,-200%)">
-		<h3 id="see-it">See it <a style="color:inherit;" href="http://confectionerycannon.com/">here</a></h3>
-	</div>
-
-	<div id="end" data-_box-450p="transform:translate(0,100%);" data-_box-550p="transform:translate(0,0%);">
-		hello
-	</div>
-
-	<script type="text/javascript" src="js/skrollr.min.js"></script>
-
-	<script type="text/javascript">
-	skrollr.init({
-		constants: {
-			//fill the box for a "duration" of 150% of the viewport (pause for 150%)
-			//adjust for shorter/longer pause
-			box: 150
-		}
-	});
-	</script>
-</body>
-
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="vegas/jquery.vegas.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script type="text/javascript" src="js/jquery.easypiechart.min.js"></script>
+    <script type="text/javascript" src="js/waypoints.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    <script>
+    </script>
+  </body>
 </html>
