--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </section><!-- welcome -->
        <!-- skills -->
      <section id="page-skills" class="page-skills">
-       <div class="container">
+       <div class="container skill-percents">
            
                  <header class="section-header">
                     <h2 class="section-title"><span>Skills</span></h2>
@@ -82,8 +82,8 @@
                     <p class="section-subtitle">Lorem ipsum dolor sit amet, id iusto oportere mel. </p>
                 </header>
             <div class="row">
-              <div class="col-md-2">
-               <span class="chart" data-percent="95">
+              <div class="col-md-2 col-md-offset-1">
+               <span class="chart" data-percent="55">
                       <span class="percent"></span>
                       <h3>Photoshop</h3>
                </span>
@@ -101,19 +101,13 @@
                </span>
             </div>
                <div class="col-md-2">
-               <span class="chart" data-percent="90">
+               <span class="chart" data-percent="85">
                       <span class="percent"></span>
                       <h3>GTAW/TIG Welding</h3>
                </span>
-            </div>
+               </div>
                <div class="col-md-2">
-               <span class="chart" data-percent="65">
-                      <span class="percent"></span>
-                      <h3>jQuery</h3>
-               </span>
-            </div>
-               <div class="col-md-2">
-               <span class="chart" data-percent="99">
+               <span class="chart" data-percent="110">
                       <span class="percent"></span>
                        <h3>Meaningless Metrics</h3>
                </span>
