even more content

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="row">
                 <header class="centered">
                     <h1>Forrest Bourke</h1>
-                    <p id="hello">ENGINEER</p>
+                    <p id="hello">ENGINEERING STUDENT</p>
                 </header>
                 <div class="social-icons">
                         <a href="http://www.linkedin.com/profile/view?id=321196702" target="_blank" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
@@ -251,7 +251,7 @@
                     </div>
                     <div class="modal-body">
                       <a href="img/portfolio/scanner/scanner04.jpg"><img class="pull-left img-responsive img-thumbnail" src="img/portfolio/scanner/scanner04s.jpg" alt="" /></a>
-                      <p>In Principles of Engineering, before doing the <a href="confectionerycannon.com">final project</a>, I made a 3D scanner with a partner.  
+                      <p>In Principles of Engineering, before doing the <a href="confectionerycannon.com">final project</a>, I made a 3D scanner with a partner. We designed and 3D-printed a pan-tilt gimbal, with an excessive bearing (which, despite being 3D-printed, was a very good press fit) to support the sensor. In the image above, you can see the scanner facing a mug with some chopsticks. The image to the left is the scan of the chopsticks, with the colors corresponding to the distance (click for a larger size).
                       </p>
                     </div>
                     <div class="modal-footer">
