--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/vegas/jquery.vegas.css">
-    <link rel="stylesheet" type="text/css" href="css/jquery.vegas.css">
+    <link rel="stylesheet" type="text/css" href="vegas/jquery.vegas.css">
+    <link rel="shortcut icon" href="img/favicon.ico" />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -40,8 +40,6 @@
             <li><a href="#page-welcome">Home</a></li>
             <li><a href="#page-profile">Profile</a></li>
             <li><a href="#page-skills">Skills</a></li>
-            <li><a href="#page-education">Education</a></li>
-            <li><a href="#page-experience">Experience</a></li>
             <li><a href="#page-portfolio">Portfolio</a></li>
             <li><a href="#page-contact">Contact</a></li>
           </ul>
@@ -83,9 +81,9 @@
                 </header>
             <div class="row">
               <div class="col-md-2 col-md-offset-1">
-               <span class="chart" data-percent="55">
+               <span class="chart" data-percent="38">
                       <span class="percent"></span>
-                      <h3>Photoshop</h3>
+                      <h3>3/8 Semesters</h3>
                </span>
             </div>
                <div class="col-md-2 ">
@@ -130,7 +128,7 @@
                   <li class="active filter"><a href="javascript:void(0)" data-filter="*">All</a></li>
                   <li class="filter" ><a href="javascript:void(0)" data-filter=".electrical">Electrical</a></li>   
                   <li class="filter" ><a href="javascript:void(0)" data-filter=".mechanical">Mechanical</a></li>            
-                  <li class="filter"><a href="javascript:void(0)"  data-filter=".other">Other</a></li>
+                  <!--<li class="filter"><a href="javascript:void(0)"  data-filter=".other">Other</a></li>-->
                 </ul>
               </div>
             
@@ -148,34 +146,15 @@
                       <li class="mix electrical mechanical" >
                        <a data-toggle="modal" data-target="#scanner"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/scanner/scanner01s.jpg" alt="" >
                       </a> </li>
-                      <li class="mix branding">
-                        <a href="img/portfolio/large/05.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/05.png" alt="" ></a></li>
-                      <li class="mix design">
-                        <a href="img/portfolio/large/06.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/06.png" alt="" ></a></li>
-                      <li class="mix photography">
-                        <a href="img/portfolio/large/07.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/07.png" alt="" ></a></li>
-                      <li class="mix photography">
-                        <a href="img/portfolio/large/08.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/08.png" alt="" ></a></li>
-                      <li class="mix photography">
-                        <a href="img/portfolio/large/09.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/09.png" alt="" ></a></li>
-                      <li class="mix web">
-                        <a href="img/portfolio/large/10.jpg"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/10.jpg" alt="" ></a></li>
-                      <li class="mix design">
-                        <a href="img/portfolio/large/11.jpg"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/11.jpg" alt="" ></a></li>
-                      <li class="mix design">
-                        <a href="img/portfolio/large/12.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/12.png" alt="" ></a></li>
-                      <li class="mix design">
-                        <a href="img/portfolio/large/13.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/13.png" alt="" ></a></li>
-                      <li class="mix design">
-                        <a href="img/portfolio/large/14.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/14.png" alt="" ></a></li>
-                         <li class="mix branding">
-                        <a href="img/portfolio/large/15.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/15.png" alt="" ></a></li>
+                      <li class="mix electrical mechanical" >
+                       <a data-toggle="modal" data-target="#quad"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/quad/quad03s.jpg" alt="" >
+                      </a> </li>
+                      <li class="mix electrical mechanical" >
+                       <a data-toggle="modal" data-target="#shop"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/shop/shop01s.jpg" alt="" >
+                      </a> </li>
                   </ul>
                 </div>
             </div>
-            <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#theremin">
-              Launch demo modal
-            </button>
             <div class="modal fade" id="theremin" tabindex="-1" role="dialog" aria-labelledby="Theremin" aria-hidden="true">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
               <div class="hz-divider medium"></div>
@@ -252,6 +231,48 @@
                     <div class="modal-body">
                       <a href="img/portfolio/scanner/scanner04.jpg"><img class="pull-left img-responsive img-thumbnail" src="img/portfolio/scanner/scanner04s.jpg" alt="" /></a>
                       <p>In Principles of Engineering, before doing the <a href="confectionerycannon.com">final project</a>, I made a 3D scanner with a partner. We designed and 3D-printed a pan-tilt gimbal, with an excessive bearing (which, despite being 3D-printed, was a very good press fit) to support the sensor. In the image above, you can see the scanner facing a mug with some chopsticks. The image to the left is the scan of the chopsticks, with the colors corresponding to the distance (click for a larger size).
+                      </p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+          </div><!-- end modal -->
+          <div class="modal fade" id="quad" tabindex="-1" role="dialog" aria-labelledby="quad" aria-hidden="true">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
+              <div class="hz-divider medium"></div>
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                  <img class="img-responsive portfolio-description-imge" src="img/portfolio/quad/quad06w.jpg" alt="" />
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                      <h4 class="modal-title" id="myModalLabel">Quadcopter</h4>
+                    </div>
+                    <div class="modal-body">
+                      <a href="img/portfolio/quad/quad03.jpg"><img class="pull-left img-responsive img-thumbnail" src="img/portfolio/quad/quad03s.jpg" alt="" /></a>
+                      <p>I built a quadcopter from Parallax ELEV-8 parts. It uses four blue and green 10x4.5 propellers, which match the blue and green LED tape on the booms. The booms are aluminium and the structural components are laser-cut delrin, some of which I've modified and recut to mount to a <a href="http://www.rctimer.com/product_884.html" target="_blank">brushless gimbal</a>, which is great for filming just about anything from the air. My current addition to the quadcopter is a <a href="https://www.hobbyking.com/hobbyking/store/__26588__MultiWii_PRO_Flight_Controller_w_MTK_GPS_Module.html" target="_blank">MultiWii PRO</a>control board with a GPS, so I'm working on getting waypoints working.
+                      </p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+          </div><!-- end modal -->
+          <div class="modal fade" id="shop" tabindex="-1" role="dialog" aria-labelledby="shop" aria-hidden="true">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
+              <div class="hz-divider medium"></div>
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                  <img class="img-responsive portfolio-description-imge" src="img/portfolio/shop/shop04w.jpg" alt="" />
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                      <h4 class="modal-title" id="myModalLabel">shop</h4>
+                    </div>
+                    <div class="modal-body">
+                      <a href="img/portfolio/shop/shop03.jpg"><img class="pull-left img-responsive img-thumbnail" src="img/portfolio/shop/shop03s.jpg" alt="" /></a>
+                      <p>For an electrical engineer, I've spent quite a bit of time in the machine shop. I used a combination of brazing and TIG welding turn hammered sheets of copper into a rose. The widget in the preview image is turned from aluminium; instead of using a die to make the threads on the front, I used a single-point threading tool and the gearing on the lathe to make the threads.
                       </p>
                     </div>
                     <div class="modal-footer">
