Added contact form

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                  <header class="section-header">
                     <h2 class="section-title"><span>Skills</span></h2>
                       <div class="spacer"></div>
-                    <p class="section-subtitle">Lorem ipsum dolor sit amet, id iusto oportere mel. </p>
+                    <p class="section-subtitle">NOTE: This website is still under construction. This skills section is pointless and gives no real information--I just like the spinning pie charts.  </p>
                 </header>
             <div class="row">
               <div class="col-md-2 col-md-offset-1">
@@ -282,6 +282,51 @@
                 </div>
           </div><!-- end modal -->
     </section><!-- portfolio ends -->
+    <!-- contact begins -->
+    <section id="page-contact" class="page-contact">
+      <div class="container">
+        <header class="section-header">
+          <h2 class="section-title"><span>Contact</span></h2>
+            <div class="spacer"></div>
+              <p class="section-subtitle">You can contact me here! </p>
+        </header>
+        <div class="row">
+          <div class="col-sm-5 contact-info">
+            <h3>Contact Info</h3>
+            <p><i class="fa fa-map-marker"></i> 1000 Olin Way, MB107, Needham, MA  02492 </p>
+            <p><i class="fa fa-phone"></i> (818) 397-1143 </p>
+            <p><i class="fa fa-envelope-o"></i> <a href="mailto:4a19c76a@opayq.com">Email Me</a> </p>
+          </div>
+          
+          <div class="col-sm-7">
+            <h3>Get in Touch</h3>
+            <form  class="form-horizontal" id="contact-form">
+              <div class="control-group">
+                <label class="control-label" for="name">Name</label>
+                <div class="controls">
+                    <input type="text" name="name" id="name" placeholder="Your name" class="form-control input-lg ">
+                </div>
+              </div>
+              <div class="control-group">
+                <label class="control-label" for="email">Email Address</label>
+                <div class="controls">
+                    <input type="text" name="email" id="email" placeholder="Your email address" class="form-control input-lg">
+                </div>
+              </div>
+              <div class="control-group">
+                <label class="control-label" for="message">Message</label>
+                <div class="controls">
+                    <textarea name="message" id="message" rows="8" class="form-control input-lg"></textarea>
+                </div>
+              </div>
+              <div class="form-actions">
+                <button type="submit" class="btn btn-default btn-lg btn-block">Submit Message</button>
+              </div>
+            </form>
+          </div>
+        </div><!-- End row -->
+      </div>
+    </section> <!-- contact ends -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
