--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
           <div class="col-md-2">
           <span class="chart" data-percent="75" data-places="0">
             <span class="percent"></span>
-            <h3>HTML/CSS</h3>
+            <h3>Making Pie Charts</h3>
           </span>
           </div>
           <div class="col-md-2">
-          <span class="chart" data-percent="85" data-places="0">
+          <span class="chart" data-percent="85" data-places="4">
             <span class="percent"></span>
-            <h3>GTAW/TIG Welding</h3>
+            <h3>Significant figures</h3>
           </span>
           </div>
           <div class="col-md-2">
