added google analytics

--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
                     </div>
                     <div class="modal-body">
                       <a href="img/portfolio/cannon/cannon03.jpg"><img class="pull-left img-responsive img-thumbnail" src="img/portfolio/cannon/cannon03s.jpg" alt="" /></a>
-                      <p>With a team of four, I built a face-tracking pneumatic marshmallow launcher. It uses OpenCV and Python to find faces, then comminicates with a microcontroller to fire the marshmallows and reload itself. You can read more at <a target="_blank" href="http://confectionerycannon.com">confectionerycannon.com</a>.</p>
-                      <p>We've been featured on 
+                      <p>With a team of four, I built a face-tracking pneumatic marshmallow launcher. It uses OpenCV and Python to find faces, then comminicates with a microcontroller to fire the marshmallows and reload itself. You can read more at <a target="_blank" href="http://confectionerycannon.com">confectionerycannon.com</a>, which I designed and </p>
+                      <p>We've been featured on:
                       <ul>
                         <li><a href="tinyurl.com/ccannon-hackaday">Hackaday</a></li>
                         <li><a href="tinyurl.com/ccannon-gizmodo">Gizmodo</a></li>
@@ -373,7 +373,15 @@
     <script type="text/javascript" src="js/jquery.easypiechart.min.js"></script>
     <script type="text/javascript" src="js/waypoints.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <script>
-    </script>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-41729175-1']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; 
+      ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+  </script>
   </body>
 </html>
