--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <p id="hello">ENGINEERING STUDENT</p>
                 </header>
                 <div class="social-icons">
-                        <a href="http://www.linkedin.com/profile/view?id=321196702" target="_blank" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
+                        <a href="http://www.linkedin.com/profile/view?id=321196702" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
                          <a href="misc/fbourke_resume.pdf" class="btn btn-round btn-clear btn-resume"><i class="fa fa-book"></i></a>
                         <a href="#page-skills" class="btn btn-round btn-clear btn-arrow"><i class="fa fa-arrow-down"></i></a>
                     
@@ -172,7 +172,7 @@
                     </div>
                     <div class="modal-body">
                       <a href="img/portfolio/theremin/theremin02.jpg"><img class="pull-left img-responsive img-thumbnail" src="img/portfolio/theremin/theremin02s.jpg" alt="" /></a>
-                      <p>For Olin's Modeling and Control class, I build a functional RF theremin. If you're not familiar with theremins, you can see a professional theremin being played on <a target="_blank" href="http://www.youtube.com/watch?feature=player_detailpage&v=Bkp9bDGDd1w#t=147">YouTube</a>. I wasn't able to build it on a breadboard due to its exreme sensitivity to stray parasitic capacitance, so the circuit needed to be dead-bugged on a piece of copper clad. I designed and laser cut a box out of MDF for the theremin, as I wanted a polished final product. Due to funding cuts, I spent an inordinate amount of time making knobs out of brass on the lathe. The final deliverable was a report, and you can download the PDF <a href="img/portfolio/theremin/theremin.pdf">here</a>.
+                      <p>For Olin's Modeling and Control class, I build a functional RF theremin. If you're not familiar with theremins, you can see a professional theremin being played on <a href="http://www.youtube.com/watch?feature=player_detailpage&v=Bkp9bDGDd1w#t=147">YouTube</a>. I wasn't able to build it on a breadboard due to its exreme sensitivity to stray parasitic capacitance, so the circuit needed to be dead-bugged on a piece of copper clad. I designed and laser cut a box out of MDF for the theremin, as I wanted a polished final product. Due to funding cuts, I spent an inordinate amount of time making knobs out of brass on the lathe. The final deliverable was a report, and you can download the PDF <a href="img/portfolio/theremin/theremin.pdf">here</a>.
                       </p>
                     </div>
                     <div class="modal-footer">
@@ -193,7 +193,7 @@
                     </div>
                     <div class="modal-body">
                       <a href="img/portfolio/power/power02.jpg"><img class="pull-left img-responsive img-thumbnail" src="img/portfolio/power/power02s.jpg" alt="" /></a>
-                      <p>I've made a of couple power amplifiers - the first was free-soldered with the LM3886 chip. I used free samples from National Semiconductor (before it was acquired by TI) to build it and most subsequent amplifiers. To get the free samples, I acquired a free domain, and set up emails for sample accounts. For my second power amplifier, I designed a PCB for the LM4780 and sent it to <a href="https://oshpark.com/" target="_blank">OSH Park</a> for fabrication. The second power amp is housed in a laser-cut baltic birch case, with a LED-illuminated laser-engraved acrylic faceplate and a 21-step attenuator for better channel balance than a standard potentiometer. Most of my power amplifiers have been powered by toroidal transformers, acquired at my favorite surplus store, <a href="http://www.apexelectronic.com/" target="_blank">Apex Electronics</a> in Sun Valley, CA.
+                      <p>I've made a of couple power amplifiers - the first was free-soldered with the LM3886 chip. I used free samples from National Semiconductor (before it was acquired by TI) to build it and most subsequent amplifiers. To get the free samples, I acquired a free domain, and set up emails for sample accounts. For my second power amplifier, I designed a PCB for the LM4780 and sent it to <a href="https://oshpark.com/">OSH Park</a> for fabrication. The second power amp is housed in a laser-cut baltic birch case, with a LED-illuminated laser-engraved acrylic faceplate and a 21-step attenuator for better channel balance than a standard potentiometer. Most of my power amplifiers have been powered by toroidal transformers, acquired at my favorite surplus store, <a href="http://www.apexelectronic.com/">Apex Electronics</a> in Sun Valley, CA.
                       </p>
                     </div>
                     <div class="modal-footer">
@@ -214,7 +214,7 @@
                     </div>
                     <div class="modal-body">
                       <a href="img/portfolio/rwm/rwm02.jpg"><img class="pull-left img-responsive img-thumbnail" src="img/portfolio/rwm/rwm02s.jpg" alt="" /></a>
-                      <p>For Olin's <a href="rwm.olin.edu" target="_blank">Real World Measurements</a> class, a team and I designed the optics and circuitry for a laser rangefinder. It was designed to send out a pulse from an infrared laser, then measure the time it takes for the pulse to be returned and detected using a photodiode. Avalanche photodiodes are commonly used for this, as they have high gain and fast response times, but our budget did not allow us to use an avalanche photodiode. We used a 22μS-resolution timer chip, and the team had to learn to use Olin's reflow oven to solder the QFN package. Unfortunately, the project failed due to problems with the firmware, as well as optical alignment issues.
+                      <p>For Olin's <a href="rwm.olin.edu">Real World Measurements</a> class, a team and I designed the optics and circuitry for a laser rangefinder. It was designed to send out a pulse from an infrared laser, then measure the time it takes for the pulse to be returned and detected using a photodiode. Avalanche photodiodes are commonly used for this, as they have high gain and fast response times, but our budget did not allow us to use an avalanche photodiode. We used a 22μS-resolution timer chip, and the team had to learn to use Olin's reflow oven to solder the QFN package. Unfortunately, the project failed due to problems with the firmware, as well as optical alignment issues.
                       </p>
                     </div>
                     <div class="modal-footer">
@@ -256,7 +256,7 @@
                     </div>
                     <div class="modal-body">
                       <a href="img/portfolio/quad/quad03.jpg"><img class="pull-left img-responsive img-thumbnail" src="img/portfolio/quad/quad03s.jpg" alt="" /></a>
-                      <p>I built a quadcopter from Parallax ELEV-8 parts. It uses four blue and green 10x4.5 propellers, which match the blue and green LED tape on the booms. The booms are aluminium and the structural components are laser-cut delrin, some of which I've modified and recut to mount to a <a href="http://www.rctimer.com/product_884.html" target="_blank">brushless gimbal</a>, which is great for filming just about anything from the air. My current addition to the quadcopter is a <a href="https://www.hobbyking.com/hobbyking/store/__26588__MultiWii_PRO_Flight_Controller_w_MTK_GPS_Module.html" target="_blank">MultiWii PRO</a>control board with a GPS, so I'm working on getting waypoints working.
+                      <p>I built a quadcopter from Parallax ELEV-8 parts. It uses four blue and green 10x4.5 propellers, which match the blue and green LED tape on the booms. The booms are aluminium and the structural components are laser-cut delrin, some of which I've modified and recut to mount to a <a href="http://www.rctimer.com/product_884.html">brushless gimbal</a>, which is great for filming just about anything from the air. My current addition to the quadcopter is a <a href="https://www.hobbyking.com/hobbyking/store/__26588__MultiWii_PRO_Flight_Controller_w_MTK_GPS_Module.html">MultiWii PRO</a>control board with a GPS, so I'm working on getting waypoints working.
                       </p>
                     </div>
                     <div class="modal-footer">
@@ -298,7 +298,7 @@
                     </div>
                     <div class="modal-body">
                       <a href="img/portfolio/cannon/cannon03.jpg"><img class="pull-left img-responsive img-thumbnail" src="img/portfolio/cannon/cannon03s.jpg" alt="" /></a>
-                      <p>With a team of four, I built a face-tracking pneumatic marshmallow launcher. It uses OpenCV and Python to find faces, then comminicates with a microcontroller to fire the marshmallows and reload itself. You can read more at <a target="_blank" href="http://confectionerycannon.com">confectionerycannon.com</a>, which I designed and </p>
+                      <p>With a team of four, I built a face-tracking pneumatic marshmallow launcher. It uses OpenCV and Python to find faces, then comminicates with a microcontroller to fire the marshmallows and reload itself. You can read more at <a href="http://confectionerycannon.com">confectionerycannon.com</a>, which I designed and </p>
                       <p>We've been featured on:
                       <ul>
                         <li><a href="tinyurl.com/ccannon-hackaday">Hackaday</a></li>
