changed jawbone text slightly

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                       <h4 class="modal-title" id="myModalLabel">Jawbone Intern, Advanced Projects Division</h4>
                     </div>
                     <div class="modal-body">
-                      <p>As an intern on Jawbone's Advanced Projects team, I assited with testing and bring up of the revolutionary bioimpedance sensors in the <a href="http://jawbone.com/store/buy/up3">UP3</a> in addition to other responsibilites 
+                      <p>As an intern on Jawbone's Advanced Projects team, I assited with testing and bring up of the revolutionary bioimpedance sensors in the <a href="http://jawbone.com/store/buy/up3">UP3</a> in addition to other responsibilites involving hardware, firmware, and general prototyping for future Jawbone products and concepts.
                       </p>
                     </div>
                     <div class="modal-footer">
