--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
                       <li class="mix electrical" >
                        <a data-toggle="modal" data-target="#up"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/up/up01s.jpg" alt="" >
                       </a> </li>
+                      <li class="mix electrical" >
+                       <a data-toggle="modal" data-target="#tyga"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/tyga/tyga9001s.png" alt="" >
+                      </a> </li>
                   </ul>
                 </div>
             </div>
@@ -357,6 +360,26 @@
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                       <h4 class="modal-title" id="myModalLabel">Jawbone Intern, Advanced Projects Division</h4>
+                    </div>
+                    <div class="modal-body">
+                      <p>As an intern on Jawbone's Advanced Projects team, I assited with testing and bring up of the revolutionary bioimpedance sensors in the <a href="http://jawbone.com/store/buy/up3">UP3</a> in addition to other responsibilites involving hardware, firmware, and general prototyping for future Jawbone products and concepts.
+                      </p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+          </div><!-- end modal -->
+          <div class="modal fade" id="tyga" tabindex="-1" role="dialog" aria-labelledby="tyga" aria-hidden="true">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
+              <div class="hz-divider medium"></div>
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                  <img class="img-responsive portfolio-description-imge" src="img/portfolio/tyga/tyga9001.png" alt="" />
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                      <h4 class="modal-title" id="myModalLabel">Mixed Analog and Digital VLSI: Tunable Gain Amplifier</h4>
                     </div>
                     <div class="modal-body">
                       <p>As an intern on Jawbone's Advanced Projects team, I assited with testing and bring up of the revolutionary bioimpedance sensors in the <a href="http://jawbone.com/store/buy/up3">UP3</a> in addition to other responsibilites involving hardware, firmware, and general prototyping for future Jawbone products and concepts.
