--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                       <h4 class="modal-title" id="myModalLabel">Mixed Analog and Digital VLSI: Tunable Gain Amplifier</h4>
                     </div>
                     <div class="modal-body">
-                      <p>As an intern on Jawbone's Advanced Projects team, I assited with testing and bring up of the revolutionary bioimpedance sensors in the <a href="http://jawbone.com/store/buy/up3">UP3</a> in addition to other responsibilites involving hardware, firmware, and general prototyping for future Jawbone products and concepts.
+                      <p>In Olin's VLSI class, my team of three designed a stereo amplifier whose gain can be digitally adjusted via a SPI interface. Even including the fairly large output transistors, we had room to include our faces on the chip. Once the IC gets fabricated (estimated Spring 2015), we will be (as far as we can tell) the only people in the world with our pictures on an integrated circuit!
                       </p>
                     </div>
                     <div class="modal-footer">
