added speakers and droideka

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <header class="section-header">
                     <h2 class="section-title"><span>Portfolio</span></h2>
                       <div class="spacer"></div>
-                    <p class="section-subtitle">Here are a few projects I've worked on. Click any of them for more pictures and a short description.</p>
+                    <p class="section-subtitle">Here are a few projects I've worked on. Click a thumbnail for more pictures and a short description.</p>
                 </header>
            
                 <!-- <div id="grid-controls-wrapper">
@@ -165,6 +165,12 @@
                       </a> </li>
                       <li class="mix electrical" >
                        <a data-toggle="modal" data-target="#tyga"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/tyga/tyga9001s.png" alt="" >
+                      </a> </li>
+                      <li class="mix electrical" >
+                       <a data-toggle="modal" data-target="#blue"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/blue/01.png" alt="" >
+                      </a> </li>
+                      <li class="mix electrical" >
+                       <a data-toggle="modal" data-target="#droid"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/droid/01s.jpg" alt="" >
                       </a> </li>
                   </ul>
                 </div>
@@ -383,6 +389,48 @@
                     </div>
                     <div class="modal-body">
                       <p>In Olin's VLSI class, my team of three designed a stereo amplifier whose gain can be digitally adjusted via a SPI interface. Even including the fairly large output transistors, we had room to include our faces on the chip. Once the IC gets fabricated (estimated Spring 2015), we will be (as far as we can tell) the only people in the world with our pictures on an integrated circuit!
+                      </p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+          </div><!-- end modal -->
+          <div class="modal fade" id="blue" tabindex="-1" role="dialog" aria-labelledby="blue" aria-hidden="true">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
+              <div class="hz-divider medium"></div>
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                  <img class="img-responsive portfolio-description-imge" src="img/portfolio/blue/02w.jpg" alt="" />
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                      <h4 class="modal-title" id="myModalLabel">Custom Active Studio Monitors</h4>
+                    </div>
+                    <div class="modal-body">
+                      <a href="img/portfolio/blue/03.jpg"><img class="pull-left img-responsive img-thumbnail" src="img/portfolio/blue/03s.jpg" alt="" /></a>
+                      <p>I built a pair of speakers out of 1/2" MDF, and designed an active amplifier circuit. I haven't completed the active crossover yet, but running the speakers with simple passive crossovers sounds pretty good! They're excruciatingly finished in "glacer white" automotive paint and clear coat, with a laser-cut backplate concealing the amplifiers.
+                      </p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+          </div><!-- end modal -->
+          <div class="modal fade" id="droid" tabindex="-1" role="dialog" aria-labelledby="droid" aria-hidden="true">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
+              <div class="hz-divider medium"></div>
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                  <img class="img-responsive portfolio-description-imge" src="img/portfolio/droid/02w.jpg" alt="" />
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                      <h4 class="modal-title" id="myModalLabel">Droideka Rolling Robot</h4>
+                    </div>
+                    <div class="modal-body">
+                      <a href="img/portfolio/droid/03.jpg"><img class="pull-left img-responsive img-thumbnail" src="img/portfolio/droid/03s.jpg" alt="" /></a>
+                      <p>At MakeMIT 2013, my team won 3rd place in the second round with our bluetooth- and wifi-controlled rolling robot. I was responsible for the electrical system, the music, and running around excitedly. 
                       </p>
                     </div>
                     <div class="modal-footer">
