add wack a mole

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </header>
         <div class="row">
           <div class="col-md-2 col-md-offset-1">
-            <span class="chart" data-percent="75" data-places="1">
+            <span class="chart" data-percent="87.5" data-places="1">
               <span class="percent"></span>
               <h3>Undergraduate Education Completed</h3>
             </span>
@@ -171,6 +171,9 @@
                       </a> </li>
                       <li class="mix electrical" >
                        <a data-toggle="modal" data-target="#droid"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/droid/01s.jpg" alt="" >
+                      </a> </li>
+                      <li class="mix electrical" >
+                       <a data-toggle="modal" data-target="#wack"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/wack/wack01s.jpg" alt="" >
                       </a> </li>
                   </ul>
                 </div>
@@ -431,6 +434,26 @@
                     <div class="modal-body">
                       <a href="img/portfolio/droid/03.jpg"><img class="pull-left img-responsive img-thumbnail" src="img/portfolio/droid/03s.jpg" alt="" /></a>
                       <p>At MakeMIT 2013, my team won 3rd place in the second round with our bluetooth- and wifi-controlled rolling robot. I was responsible for the electrical system, the music, and running around excitedly. 
+                      </p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+          </div><!-- end modal -->
+          <div class="modal fade" id="wack" tabindex="-1" role="dialog" aria-labelledby="droid" aria-hidden="true">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
+              <div class="hz-divider medium"></div>
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                  <img class="img-responsive portfolio-description-imge" src="img/portfolio/wack/wack02.jpg" alt="" />
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                      <h4 class="modal-title" id="myModalLabel">Wack-A-Mole</h4>
+                    </div>
+                    <div class="modal-body">
+                      <p>For Elecanisms (Spring 2015), my team built a Wack-A-Mole game where the moles run away from the player. More info is on the website the team created for the project: <a href="http://forrestbourke.com/elecanisms/">fbourke.github.io/elecanisms/</a> or by viewing our <a href="https://www.youtube.com/watch?v=3j-_X7gOFWI">YouTube video.</a>
                       </p>
                     </div>
                     <div class="modal-footer">
