added apple and photography

--- a/index.html
+++ b/index.html
@@ -175,6 +175,12 @@
                       <li class="mix electrical" >
                        <a data-toggle="modal" data-target="#wack"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/wack/wack01s.jpg" alt="" >
                       </a> </li>
+                      <li class="mix electrical" >
+                       <a data-toggle="modal" data-target="#apple"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/apple/02s.jpg" alt="" >
+                      </a> </li>
+                      <li class="mix electrical" >
+                       <a data-toggle="modal" data-target="#photo"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/photo/01s.jpg" alt="" >
+                      </a> </li>
                   </ul>
                 </div>
             </div>
@@ -455,6 +461,45 @@
                     <div class="modal-body">
                       <p>For Elecanisms (Spring 2015), my team built a Wack-A-Mole game where the moles run away from the player. More info is on the website the team created for the project: <a href="http://forrestbourke.com/elecanisms/">fbourke.github.io/elecanisms/</a> or by viewing our <a href="https://www.youtube.com/watch?v=3j-_X7gOFWI">YouTube video.</a>
                       </p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+          </div><!-- end modal -->
+          <div class="modal fade" id="apple" tabindex="-1" role="dialog" aria-labelledby="droid" aria-hidden="true">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
+              <div class="hz-divider medium"></div>
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                      <h4 class="modal-title" id="myModalLabel">Apple Hardware Engineering Intern</h4>
+                    </div>
+                    <div class="modal-body">
+                      <p>The summer of 2015, I was an engineering intern at Apple. Unfortunately, most of my work is covered under a strict NDA, but I was working on analog electronics design as well as assorted prototyping. 
+                      </p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+          </div><!-- end modal -->
+          <div class="modal fade" id="photo" tabindex="-1" role="dialog" aria-labelledby="droid" aria-hidden="true">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
+              <div class="hz-divider medium"></div>
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <img class="img-responsive portfolio-description-imge" src="img/portfolio/photo/01.jpg" alt="" />
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                      <h4 class="modal-title" id="myModalLabel">Analog Photography</h4>
+                    </div>
+                    <div class="modal-body">
+                      <p>I enjoy analog photography using a variety of media. I hand-process all of my black and white film, including 35mm, 120 (medium format) and 4x5" (large format). More of my work is found on my <a href="https://www.flickr.com/photos/forrestbourke/">Flickr profile.</a>
+                      </p> <p>In Fall 2015, I made a series of close-up portraits with my Speed Graphic on Kodalith film for my Arts and Humanities capstone project. The image above is one in the series, and more examples are <a href="https://www.flickr.com/photos/forrestbourke/23182782320/in/dateposted-public/">on Flickr</a>.</p>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
